Changelog
=========

4.0.4 - unreleased
------------------

- Removed broken icons and fix invalid XHTML in translation browser popup.
  [hannosch]

- Link to translation browser popup was broken in some VirtualHost setups.
  This closes http://plone.org/products/linguaplone/issues/277.
  [tgraf, hannosch]

- Use template parameter in language selector's viewlet zcml declaration. This
  makes it easier to customize in add-ons. The change requires plone.app.i18n
  2.0.1 or greater.
  [toutpt]

- Force translate menu flag icons dimensions to 14x11 px,
  so that it's consistent with language selector menu.
  Works with plone.app.contentmenu 2.0.4+.
  [thomasdesvenain]

- Changed policy for preserving the view/template in the language selector. We
  only do this if the target item is a direct translation of the current
  context. Otherwise we might link to views which are not available on the
  target content type.
  [thomasdesvenain, hannosch]

- translate_item form works when content has no 'default' fieldset.
  [thomasdesvenain]

- Declare plone.app.iterate dependency.
  [thomasdesvenain]

4.0.3 - 2011-05-27
------------------

- Changed string exceptions to ValueErrors in `translate_edit.cpy`.
  [robert]

- Fix the tests to work with GenericSetup 1.6.3+.
  [hannosch]

- Explicitly load the CMF permissions before using them in a `configure.zcml`.
  [hannosch]

4.0.2 - 2011-01-26
------------------

- Force the user to select a language before attempting to translate
  neutral content items. One content item can be either neutral or have
  translations, but not a mix of the two.
  [witsch]

- Don't create an extra folder when translating the default page of a
  language-neutral folder.
  [witsch]

4.0.1 - 2011-01-10
------------------

- Changed defaultLanguage behavior in I18NBaseObject to always report the
  parent's folder language even if it is neutral.
  [ggozad]

4.0 - 2010-11-25
----------------
