@@ -2,6 +2,7 @@ from plone.app.i18n.locales.browser.selector import LanguageSelector
 from plone.app.layout.navigation.interfaces import INavigationRoot
 from zope.component import getMultiAdapter
 
+from AccessControl.SecurityManagement import getSecurityManager
 from Acquisition import aq_chain
 from Acquisition import aq_inner
 from Products.CMFCore.interfaces import ISiteRoot
@@ -32,11 +33,13 @@ class TranslatableLanguageSelector(LanguageSelector):
         translations = {}
         chain = aq_chain(context)
         first_pass = True
+        _checkPermission = getSecurityManager().checkPermission
         for item in chain:
             if ISiteRoot.providedBy(item):
                 # We have a site root, which works as a fallback
+                has_view_permission = bool(_checkPermission('View', item))
                 for c in missing:
-                    translations[c] = (item, first_pass)
+                    translations[c] = (item, first_pass, has_view_permission)
                 break
 
             translatable = ITranslatable(item, None)
@@ -47,19 +50,26 @@ class TranslatableLanguageSelector(LanguageSelector):
             for code, trans in item_trans.items():
                 code = str(code)
                 if code not in translations:
+                    # make a link to a translation only if the user
+                    # has view permission
+                    has_view_permission = bool(_checkPermission('View', trans))
+                    if (not INavigationRoot.providedBy(item)
+                            and not has_view_permission):
+                        continue
                     # If we don't yet have a translation for this language
                     # add it and mark it as found
-                    translations[code] = (trans, first_pass)
+                    translations[code] = (trans, first_pass,
+                            has_view_permission)
                     missing = missing - set((code, ))
 
             if len(missing) <= 0:
                 # We have translations for all
                 break
             if INavigationRoot.providedBy(item):
-                # Don't break out of the navigation root jail, we assume
-                # the INavigationRoot is usually translated into all languages
+                # Don't break out of the navigation root jail
+                has_view_permission = bool(_checkPermission('View', item))
                 for c in missing:
-                    translations[c] = (item, False)
+                    translations[c] = (item, False, has_view_permission)
                 break
             first_pass = False
         # return a dict of language code to tuple. the first tuple element is
@@ -103,13 +113,14 @@ class TranslatableLanguageSelector(LanguageSelector):
         supported_langs = [v['code'] for v in results]
         missing = set([str(c) for c in supported_langs])
         translations = self._translations(missing)
-
         # We want to preserve the current template / view as used for the
         # current object and also use it for the other languages
         append_path = self._findpath(context.getPhysicalPath(),
                                      self.request.get('PATH_INFO', ''))
         formvariables = self._formvariables(self.request.form)
+        _checkPermission = getSecurityManager().checkPermission
 
+        non_viewable = set()
         for data in results:
             code = str(data['code'])
             data['translated'] = code in translations.keys()
@@ -128,7 +139,12 @@ class TranslatableLanguageSelector(LanguageSelector):
                     appendtourl += set_language
 
             if data['translated']:
-                trans, direct = translations[code]
+                trans, direct, has_view_permission = translations[code]
+                if not has_view_permission:
+                    # shortcut if the user cannot see the item
+                    non_viewable.add((data['code']))
+                    continue
+
                 state = getMultiAdapter((trans, self.request),
                         name='plone_context_state')
                 if direct:
@@ -136,6 +152,19 @@ class TranslatableLanguageSelector(LanguageSelector):
                 else:
                     data['url'] = state.canonical_object_url() + set_language
             else:
+                has_view_permission = bool(_checkPermission('View', context))
+                # Ideally, we should also check the View permission of default
+                # items of folderish objects.
+                # However, this would be expensive at it would mean that the
+                # default item should be loaded as well.
+                #
+                # IOW, it is a conscious decision to not take in account the
+                # use case where a user has View permission a folder but not on
+                # its default item.
+                if not has_view_permission:
+                    non_viewable.add((data['code']))
+                    continue
+
                 state = getMultiAdapter((context, self.request),
                         name='plone_context_state')
                 try:
@@ -143,4 +172,6 @@ class TranslatableLanguageSelector(LanguageSelector):
                 except AttributeError:
                     data['url'] = context.absolute_url() + appendtourl
 
+        # filter out non-viewable items
+        results = [r for r in results if r['code'] not in non_viewable]
         return results
